--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,6 @@ repositories {
 }
 
 dependencies {
+    implementation "org.jetbrains:annotations:20.1.0"
     testImplementation 'junit:junit:4.13'
 }
